# ResourceManagerService

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/action/: Action.h  CMakeLists.txt
src/action/loaders/: BaseLoader.cpp  BaseLoader.h  BundleLoader.cpp  BundleLoader.h  CMakeLists.txt  FileLoader.cpp  FileLoader.h  HttpLoader.cpp  HttpLoader.h  LoaderFactory.h  LoaderTypes.h
src/action/processors/: BaseProcessor.cpp  BaseProcessor.h  CMakeLists.txt  Decompressor.cpp  Decompressor.h  ImageDecoder.cpp  ImageDecoder.h  JsonParser.cpp  JsonParser.h  ProcessorFactory.h  ProcessorTypes.h
src/contentTypes/: CMakeLists.txt  ContentType.cpp  ContentType.h
src/logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/pipeline/: CMakeLists.txt  ComputePipeline.cpp  ComputePipeline.h
src/resource/: CMakeLists.txt  Metadata.cpp  Metadata.h  Resource.cpp  Resource.h
